tests/assets/test_suites/w3c_wsdl20/documents/good/Chameleon-4G/getBalance.wsdl
<?xml version="1.0" encoding="UTF-8"?>
<!-- https://dev.w3.org/2002/ws/desc/test-suite/documents/good/Chameleon-4G/getBalance.wsdl -->
<!-- Copyright © 2007-03-23 05:51 - W3C, (MIT, ERCIM, Keio). All Rights Reserved. http://www.w3.org/Consortium/Legal/2002/copyright-documents-20021231 -->
<wsdl:description xmlns:tns="http://example.org/getBalance/"
	xmlns:wsdl="http://www.w3.org/ns/wsdl"
	xmlns:xsd="http://www.w3.org/2001/XMLSchema"
	targetNamespace="http://example.org/getBalance/"
	xmlns:customer="http://example.org/getBalance/customer/"
	xmlns:account="http://example.org/getBalance/account/">

	<wsdl:documentation>
		This test shows how to use elements from two no-target namespace
		xsds (each included in a seperate inline schema)
	</wsdl:documentation>

	<wsdl:types>
		<xsd:schema
			targetNamespace="http://example.org/getBalance/customer/">
			<xsd:include schemaLocation="customerInfo.xsd" />
		</xsd:schema>

		<xsd:schema
			targetNamespace="http://example.org/getBalance/account/">
			<xsd:include schemaLocation="accountInfo.xsd" />
		</xsd:schema>
	</wsdl:types>

	<wsdl:interface name="getBalanceInf">
		<wsdl:operation name="getBalance"
			pattern="http://www.w3.org/ns/wsdl/in-out">
			<wsdl:input element="customer:custInfo" />
			<wsdl:output element="account:accInfo" />
		</wsdl:operation>
	</wsdl:interface>
</wsdl:description>